--- a/_config.yml
+++ b/_config.yml
@@ -2,11 +2,12 @@
 
 # REQUIRED CHANGES
 # Edit next line, providing your own name.
-title: Molly Maluhia | Professional Portfolio
+title: Michael Gainey | Professional Portfolio
 # Edit next line, replacing 'techfolios' with your github username
-url: "https://techfolios.github.io"
+url: "https://micgainey.github.io"
 # Edit next line so that baseurl is "" if your repo is <username>.github.io
-baseurl: "/template"
+baseurl: ""
+# "/template"
 
 # OPTIONAL CHANGES
 # You might want to change the bio page label to something else, such as CV
